<resources>
    <string name="login">Вход</string>
    <string name="email">Email</string>
    <string name="example_email">example@gmail.com</string>
    <string name="password">Пароль</string>
    <string name="enter_password">Введите пароль</string>
    <string name="dont_have_an_account">Нету аккаунта?</string>
    <string name="registry">Регистрация</string>
    <string name="forgot_password">Забыл пароль</string>
    <string name="incorrect_email">Неверный адрес электронной почты</string>
    <string name="empty_password">Поле пароля не может быть пустым</string>
</resources>