<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".presentaion.AuthActivity">

    <TextView
        android:id="@+id/loginTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginBottom="20dp"
        android:text="@string/login"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/emailTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/email" />

    <EditText
        android:id="@+id/emailEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/example_email"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/passTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/password" />

    <EditText
        android:id="@+id/passEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:enabled="false"
        android:text="@string/login" />

    <LinearLayout
        android:id="@+id/registryLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_an_account" />

        <TextView
            android:id="@+id/registryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextViewButtonStyle"
            android:layout_marginStart="8dp"
            android:text="@string/registry" />

    </LinearLayout>

    <TextView
        android:id="@+id/forgotPassButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextViewButtonStyle"
        android:layout_marginTop="5dp"
        android:text="@string/forgot_password" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/socialNetworkLayout"
        android:layout_marginTop="40dp">

        <ImageButton
            android:layout_width="160dp"
            android:id="@+id/vkButton"
            android:layout_height="45dp"
            android:background="@drawable/vk_background"
            android:scaleType="fitCenter"
            android:src="@drawable/vk_logo"
            app:layout_constraintEnd_toStartOf="@+id/okButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/okButton"
            android:layout_width="160dp"
            android:layout_height="45dp"
            android:background="@drawable/ok_background"
            android:padding="5dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ok_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/vkButton"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>